# flask-ckfinder3

./: .gitignore  setup.cfg
example/: app.py
example/templates/: home.html
flask_ckfinder3/: ckfinder.py  connector.py  resource_type.py
