[metadata]
name = Flask-CKFinder3
version = attr: flask_ckfinder3.__version__
author = Aristofor Kolomb
author_email = aristofor@gmail.com
url = https://gitlab.com/aristofor/flask-ckfinder3
description = Flask CKFinder3 connector
long_description = file: README.rst
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Flask
    Programming Language :: Python :: 3
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: Site Management
    License :: OSI Approved :: MIT License

[options]
packages = flask_ckfinder3
include_package_data = True
install_requires =
    Flask>=1.1.2
    Pillow>=7.2.0
